--- a/WebContent/welcome.xhtml
+++ b/WebContent/welcome.xhtml
@@ -3,6 +3,9 @@
 		  
 	<h:body>
 		<h1>Welcome, #{user.name}</h1>
+		
+		<p> The current date and time is: #{user.currentDateAndTime} </p>
+		
 	</h:body>
 		  
 </html>
