--- a/WebContent/employeeDetails.xhtml
+++ b/WebContent/employeeDetails.xhtml
@@ -1,20 +1,23 @@
 <HTML xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:h="http://java.sun.com/jsf/html">
+	  xmlns:h="http://java.sun.com/jsf/html"
+	  xmlns:f="http://java.sun.com/jsf/core">
 	
 	<h:head>
 		<title>Employee Details</title>
 	</h:head>
 	
 	<h:body>
-		<h3>Thank you, a new employee has been created:</h3>
+		<H1>Employee details for: #{allEmployeesPage.selectedEmployee}</H1>
+		
 		<p><h:outputLabel>Firs Name: </h:outputLabel>
-		<h:outputText value="#{newEmployee.firstName}" /></p>
+		<h:outputText value="#{allEmployeesPage.selectedEmployee.firstName}" /></p>
 		<p><h:outputLabel>Surname: </h:outputLabel>
-		<h:outputText value="#{newEmployee.surname}" /></p>
+		<h:outputText value="#{allEmployeesPage.selectedEmployee.surname}" /></p>
 		<p><h:outputLabel>Job role: </h:outputLabel>
-		<h:outputText value="#{newEmployee.jobRole}" /></p>
+		<h:outputText value="#{allEmployeesPage.selectedEmployee.jobRole}" /></p>
 		<p><h:outputLabel>Salary: </h:outputLabel>
-		<h:outputText value="#{newEmployee.salary}" /></p>
+		<h:outputLabel>$</h:outputLabel><h:outputText value="#{allEmployeesPage.selectedEmployee.salary}" /></p>
+
 	</h:body>
 
 </HTML>
